force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/Apttus_Config2__SearchAttributeValue__c.object-meta.xml
<CustomObject>
    <description>Holds product search parameters and default values for line items</description>
    <label>Search Attribute Value</label>
    <nameField>
        <label>Search Attribute Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>