force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/APT_Are_you_needing_returns_service__c.field-meta.xml
<CustomField>
    <fullName>APT_Are_you_needing_returns_service__c</fullName>
    <label>Are you needing returns service?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>- - Select Option - -</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>