force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/APT_Average_weight_of_parcel__c.field-meta.xml
<CustomField>
    <fullName>APT_Average_weight_of_parcel__c</fullName>
    <label>Average weight of parcel?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>- - Select Option - -</fullName>
            </value>
            <value>
                <fullName>Does not contain Overweight items</fullName>
            </value>
            <value>
                <fullName>Contains overweight items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>