force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/APT_How_many_parcels_a_year_do_you_send__c.field-meta.xml
<CustomField>
    <fullName>APT_How_many_parcels_a_year_do_you_send__c</fullName>
    <label>How many parcels a year do you send?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1000</fullName>
            </value>
            <value>
                <fullName>Over 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>