force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/APT_Send_Addressed_or_unaddressed_mail__c.field-meta.xml
<CustomField>
    <fullName>APT_Send_Addressed_or_unaddressed_mail__c</fullName>
    <label>Send Addressed or unaddressed mail?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, both Addressed and Unaddressed</fullName>
            </value>
            <value>
                <fullName>Yes Unaddressed Only</fullName>
            </value>
            <value>
                <fullName>Yes addressed only</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>