force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/APT_Send_parcels_outside_max_dimensions__c.field-meta.xml
<CustomField>
    <fullName>APT_Send_parcels_outside_max_dimensions__c</fullName>
    <label>Send parcels outside max dimensions?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>- - Select Option - -</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>&gt; 22Kg</fullName>
            </value>
            <value>
                <fullName>&gt; 105 cm &gt; 62.5 cubic kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>