force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/APT_Vol_of_domestic_parcels_you_send__c.field-meta.xml
<CustomField>
    <fullName>APT_Vol_of_domestic_parcels_you_send__c</fullName>
    <label>Volume of domestic parcels you send?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1000</fullName>
            </value>
            <value>
                <fullName>$1000 or more</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>