force-app/main/default/objects/Apttus_Config2__SearchAttributeValue__c/fields/Apttus_Config2__CategoryId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CategoryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated category.</description>
    <label>Category</label>
    <referenceTo>Apttus_Config2__ClassificationName__c</referenceTo>
    <relationshipLabel>Search Attribute Values</relationshipLabel>
    <relationshipName>SearchAttributeValues</relationshipName>
    <type>Lookup</type>
</CustomField>